Issue #2025615 by chrisjlee: Fixed top bar sticky hides behind admin menu.

--- a/STARTER/css/custom.css
+++ b/STARTER/css/custom.css
@@ -7255,3 +7255,7 @@ a.th {
 }
 
 /* Each individual part that can be added in */
+/* line 3, ../scss/base/_drupal.scss */
+.admin-menu .fixed {
+  top: 1.8125em;
+}
