--- a/STARTER/scss/base/_drupal.scss
+++ b/STARTER/scss/base/_drupal.scss
@@ -1,1 +1,5 @@
 // Drupal comes with css quirks (Drupalisms). Unravel or override them here.
+
+.admin-menu .fixed {
+  top: emCalc(29px);
+}
